@startuml domain-model-level-1

title DOMAIN MODEL - DDD

hide empty members
'skinparam Linetype ortho

skinparam class {
    BackgroundColor<<valueObject>> #D6EAF8
    BackgroundColor<<root>> #FDEBD0
    BackgroundColor<<service>> #D1F2EB
    BackgroundColor #FEF9E7
    ArrowColor Black
}

skinparam package {
    BackgroundColor #EBF5FB
}

entity User <<entity>> {}

entity Patient <<entity>> {}

entity Staff <<entity>> {}

entity Specialization <<entity>> {}

entity OperationRequest <<entity>> {}

entity OperationType <<entity>> {}

entity Appointment <<Entity>> {}

entity SurgeryRoom <<Entity>> {}

entity Allergies <<Entity>> {}

entity MedicalConditions <<Entity>> {}

entity MedicalHistory <<Entity>> {}

User "1" -left-> "1" Patient : can be
User "1" -right-> "1" Staff : can be

Staff "1" --> "1" Specialization : has
Staff "1" -right-> "*" OperationRequest : if doctor then it manages


OperationRequest "1" --> "1" OperationType : has
OperationRequest "1" --> "1" Patient : has

OperationType "1" --> "*" Specialization : has

Appointment "1" --> "1" OperationRequest : has
Appointment "1" --> "1" SurgeryRoom : has

Patient "1" -up-> "1" MedicalHistory : has

MedicalHistory "1" -up-> "*" Allergies : has
MedicalHistory "1" -up-> "*" MedicalConditions : has

@enduml